--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -58,8 +57,10 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+    html {
+    scroll-behavior: smooth;
+  }
 }
-
 
 @layer base {
   * {
